RCON-741: Set up DTO, entity, repository

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,11 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-3.0'
+	testImplementation 'org.codehaus.groovy:groovy-all:3.0.18'
+	testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-3.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+	testImplementation 'com.h2database:h2:2.2.224'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
