RCON-741: Add getPetsByID endpoint, tests not configured properly

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ java {
 	sourceCompatibility = '17'
 }
 
+compileJava {
+	options.compilerArgs
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
